// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateSheets downloadAuditBoardCredentials generates audit board credentials sheets 1`] = `
"%PDF-1.3
%ºß¬à
3 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 4 0 R
>>
endobj
4 0 obj
<<
/Length 7113
>>
stream
0.57 w
0 G
BT
/F1 9 Tf
10.35 TL
0 g
25.51 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 721.13 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 695.62 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 721.13 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 695.62 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 721.13 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 695.62 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 648.85 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 623.34 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 648.85 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 623.34 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 648.85 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 623.34 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 576.57 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 551.06 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 576.57 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 551.06 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 576.57 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 551.06 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 518.46 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 504.28 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 478.77 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 518.46 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 504.28 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 478.77 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 518.46 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 504.28 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 478.77 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 432.00 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 406.49 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 432.00 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 406.49 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 432.00 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 406.49 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 359.72 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 334.20 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 359.72 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 334.20 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 359.72 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 334.20 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 287.43 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 261.92 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 287.43 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 261.92 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 287.43 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 261.92 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 215.15 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 189.64 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 215.15 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 189.64 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 215.15 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 189.64 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 142.87 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 117.35 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 142.87 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 117.35 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 142.87 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 117.35 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
5 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 6 0 R
>>
endobj
6 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
7 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 8 0 R
>>
endobj
8 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
9 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 10 0 R
>>
endobj
10 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
11 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 12 0 R
>>
endobj
12 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
13 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 14 0 R
>>
endobj
14 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
15 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 16 0 R
>>
endobj
16 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
17 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 18 0 R
>>
endobj
18 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
19 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 20 0 R
>>
endobj
20 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
21 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 22 0 R
>>
endobj
22 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
23 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 24 0 R
>>
endobj
24 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
25 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 26 0 R
>>
endobj
26 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
27 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 28 0 R
>>
endobj
28 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
29 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 30 0 R
>>
endobj
30 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
31 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 32 0 R
>>
endobj
32 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
33 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 34 0 R
>>
endobj
34 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
35 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 36 0 R
>>
endobj
36 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
37 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 38 0 R
>>
endobj
38 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
39 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 40 0 R
>>
endobj
40 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
41 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 42 0 R
>>
endobj
42 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
43 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 44 0 R
>>
endobj
44 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
45 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 46 0 R
>>
endobj
46 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
47 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 48 0 R
>>
endobj
48 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
49 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 50 0 R
>>
endobj
50 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
51 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 52 0 R
>>
endobj
52 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
53 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 54 0 R
>>
endobj
54 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
55 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 56 0 R
>>
endobj
56 0 obj
<<
/Length 734
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #01) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-randomness) Tj
ET
endstream
endobj
57 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 58 0 R
>>
endobj
58 0 obj
<<
/Length 489
>>
stream
0.57 w
0 G
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #02) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-secondary-randomness) Tj
ET
endstream
endobj
1 0 obj
<</Type /Pages
/Kids [3 0 R 5 0 R 7 0 R 9 0 R 11 0 R 13 0 R 15 0 R 17 0 R 19 0 R 21 0 R 23 0 R 25 0 R 27 0 R 29 0 R 31 0 R 33 0 R 35 0 R 37 0 R 39 0 R 41 0 R 43 0 R 45 0 R 47 0 R 49 0 R 51 0 R 53 0 R 55 0 R 57 0 R ]
/Count 28
>>
endobj
59 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
60 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
61 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
62 0 obj
<<
/Type /Font
/BaseFont /Helvetica-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
63 0 obj
<<
/Type /Font
/BaseFont /Courier
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
64 0 obj
<<
/Type /Font
/BaseFont /Courier-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
65 0 obj
<<
/Type /Font
/BaseFont /Courier-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
66 0 obj
<<
/Type /Font
/BaseFont /Courier-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
67 0 obj
<<
/Type /Font
/BaseFont /Times-Roman
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
68 0 obj
<<
/Type /Font
/BaseFont /Times-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
69 0 obj
<<
/Type /Font
/BaseFont /Times-Italic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
70 0 obj
<<
/Type /Font
/BaseFont /Times-BoldItalic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
71 0 obj
<<
/Type /Font
/BaseFont /ZapfDingbats
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
72 0 obj
<<
/Type /Font
/BaseFont /Symbol
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
2 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/Font <<
/F1 59 0 R
/F2 60 0 R
/F3 61 0 R
/F4 62 0 R
/F5 63 0 R
/F6 64 0 R
/F7 65 0 R
/F8 66 0 R
/F9 67 0 R
/F10 68 0 R
/F11 69 0 R
/F12 70 0 R
/F13 71 0 R
/F14 72 0 R
>>
/XObject <<
>>
>>
endobj
73 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
74 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
75 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
76 0 obj
<<
/Producer (jsPDF 1.5.3)
/
>>
endobj
77 0 obj
<<
/Type /Catalog
/Pages 1 0 R
/OpenAction [3 0 R /FitH null]
/PageLayout /OneColumn
/OpenAction 73 0 R
/OpenAction 74 0 R
/OpenAction 75 0 R
>>
endobj
xref
0 78
0000000000 65535 f 
0000019523 00000 n 
0000021532 00000 n 
0000000015 00000 n 
0000000124 00000 n 
0000007289 00000 n 
0000007398 00000 n 
0000007714 00000 n 
0000007823 00000 n 
0000008139 00000 n 
0000008249 00000 n 
0000008565 00000 n 
0000008676 00000 n 
0000008993 00000 n 
0000009104 00000 n 
0000009421 00000 n 
0000009532 00000 n 
0000009848 00000 n 
0000009959 00000 n 
0000010276 00000 n 
0000010387 00000 n 
0000010704 00000 n 
0000010815 00000 n 
0000011131 00000 n 
0000011242 00000 n 
0000011559 00000 n 
0000011670 00000 n 
0000011987 00000 n 
0000012098 00000 n 
0000012414 00000 n 
0000012525 00000 n 
0000012842 00000 n 
0000012953 00000 n 
0000013270 00000 n 
0000013381 00000 n 
0000013697 00000 n 
0000013808 00000 n 
0000014125 00000 n 
0000014236 00000 n 
0000014553 00000 n 
0000014664 00000 n 
0000014980 00000 n 
0000015091 00000 n 
0000015408 00000 n 
0000015519 00000 n 
0000015836 00000 n 
0000015947 00000 n 
0000016263 00000 n 
0000016374 00000 n 
0000016691 00000 n 
0000016802 00000 n 
0000017119 00000 n 
0000017230 00000 n 
0000017546 00000 n 
0000017657 00000 n 
0000017974 00000 n 
0000018085 00000 n 
0000018871 00000 n 
0000018982 00000 n 
0000019767 00000 n 
0000019893 00000 n 
0000020024 00000 n 
0000020158 00000 n 
0000020296 00000 n 
0000020420 00000 n 
0000020549 00000 n 
0000020681 00000 n 
0000020817 00000 n 
0000020945 00000 n 
0000021072 00000 n 
0000021201 00000 n 
0000021334 00000 n 
0000021436 00000 n 
0000021785 00000 n 
0000021841 00000 n 
0000021897 00000 n 
0000021953 00000 n 
0000022039 00000 n 
trailer
<<
/Size 78
/Root 77 0 R
/Info 76 0 R
/
>>
startxref
22200
%%EOF"
`;

exports[`generateSheets downloadAuditBoardCredentials generates audit board credentials sheets with ballotless audit board 1`] = `
"%PDF-1.3
%ºß¬à
3 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 4 0 R
>>
endobj
4 0 obj
<<
/Length 7113
>>
stream
0.57 w
0 G
BT
/F1 9 Tf
10.35 TL
0 g
25.51 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 721.13 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 695.62 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 721.13 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 695.62 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 721.13 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 695.62 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 648.85 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 623.34 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 648.85 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 623.34 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 648.85 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 623.34 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 576.57 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 551.06 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 576.57 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 551.06 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 576.57 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 551.06 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 518.46 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 504.28 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 478.77 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 518.46 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 504.28 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 478.77 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 518.46 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 504.28 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 478.77 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 432.00 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 406.49 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 432.00 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 406.49 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 432.00 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 406.49 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 359.72 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 334.20 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 359.72 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 334.20 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 359.72 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 334.20 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 287.43 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 261.92 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 287.43 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 261.92 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 287.43 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 261.92 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 215.15 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 189.64 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 215.15 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 189.64 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 215.15 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 189.64 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 142.87 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 117.35 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 142.87 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 117.35 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 142.87 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 117.35 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
5 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 6 0 R
>>
endobj
6 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
7 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 8 0 R
>>
endobj
8 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
9 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 10 0 R
>>
endobj
10 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
11 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 12 0 R
>>
endobj
12 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
13 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 14 0 R
>>
endobj
14 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
15 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 16 0 R
>>
endobj
16 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
17 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 18 0 R
>>
endobj
18 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
19 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 20 0 R
>>
endobj
20 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
21 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 22 0 R
>>
endobj
22 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
23 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 24 0 R
>>
endobj
24 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
25 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 26 0 R
>>
endobj
26 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
27 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 28 0 R
>>
endobj
28 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
29 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 30 0 R
>>
endobj
30 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
31 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 32 0 R
>>
endobj
32 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
33 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 34 0 R
>>
endobj
34 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
35 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 36 0 R
>>
endobj
36 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
37 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 38 0 R
>>
endobj
38 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
39 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 40 0 R
>>
endobj
40 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
41 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 42 0 R
>>
endobj
42 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
43 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 44 0 R
>>
endobj
44 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
45 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 46 0 R
>>
endobj
46 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
47 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 48 0 R
>>
endobj
48 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
49 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 50 0 R
>>
endobj
50 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
51 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 52 0 R
>>
endobj
52 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
53 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 54 0 R
>>
endobj
54 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
55 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 56 0 R
>>
endobj
56 0 obj
<<
/Length 734
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #01) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-randomness) Tj
ET
endstream
endobj
57 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 58 0 R
>>
endobj
58 0 obj
<<
/Length 489
>>
stream
0.57 w
0 G
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #02) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-secondary-randomness) Tj
ET
endstream
endobj
59 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 60 0 R
>>
endobj
60 0 obj
<<
/Length 489
>>
stream
0.57 w
0 G
BT
/F2 22 Tf
25.30 TL
0 g
56.69 735.31 Td
(Audit Board #02) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 678.61 Td
(Scan this QR code to enter the votes you see on your assigned ballots.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 451.84 Td
(If you are not able to scan the QR code, you may also type the following URL into) Tj
T* (a web browser to access the data entry portal.) Tj
ET
BT
/F1 14 Tf
16.10 TL
0 g
56.69 395.15 Td
(http://localhost/auditboard/happy-secondary-randomness) Tj
ET
endstream
endobj
61 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 62 0 R
>>
endobj
62 0 obj
<<
/Length 88
>>
stream
0.57 w
0 G
BT
/F1 14 Tf
16.10 TL
0 g
56.69 735.31 Td
(Audit Board #01: No ballots) Tj
ET
endstream
endobj
1 0 obj
<</Type /Pages
/Kids [3 0 R 5 0 R 7 0 R 9 0 R 11 0 R 13 0 R 15 0 R 17 0 R 19 0 R 21 0 R 23 0 R 25 0 R 27 0 R 29 0 R 31 0 R 33 0 R 35 0 R 37 0 R 39 0 R 41 0 R 43 0 R 45 0 R 47 0 R 49 0 R 51 0 R 53 0 R 55 0 R 57 0 R 59 0 R 61 0 R ]
/Count 30
>>
endobj
63 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
64 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
65 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
66 0 obj
<<
/Type /Font
/BaseFont /Helvetica-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
67 0 obj
<<
/Type /Font
/BaseFont /Courier
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
68 0 obj
<<
/Type /Font
/BaseFont /Courier-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
69 0 obj
<<
/Type /Font
/BaseFont /Courier-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
70 0 obj
<<
/Type /Font
/BaseFont /Courier-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
71 0 obj
<<
/Type /Font
/BaseFont /Times-Roman
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
72 0 obj
<<
/Type /Font
/BaseFont /Times-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
73 0 obj
<<
/Type /Font
/BaseFont /Times-Italic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
74 0 obj
<<
/Type /Font
/BaseFont /Times-BoldItalic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
75 0 obj
<<
/Type /Font
/BaseFont /ZapfDingbats
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
76 0 obj
<<
/Type /Font
/BaseFont /Symbol
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
2 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/Font <<
/F1 63 0 R
/F2 64 0 R
/F3 65 0 R
/F4 66 0 R
/F5 67 0 R
/F6 68 0 R
/F7 69 0 R
/F8 70 0 R
/F9 71 0 R
/F10 72 0 R
/F11 73 0 R
/F12 74 0 R
/F13 75 0 R
/F14 76 0 R
>>
/XObject <<
>>
>>
endobj
77 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
78 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
79 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
80 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
81 0 obj
<<
/Producer (jsPDF 1.5.3)
/
>>
endobj
82 0 obj
<<
/Type /Catalog
/Pages 1 0 R
/OpenAction [3 0 R /FitH null]
/PageLayout /OneColumn
/OpenAction 77 0 R
/OpenAction 78 0 R
/OpenAction 79 0 R
/OpenAction 80 0 R
>>
endobj
xref
0 83
0000000000 65535 f 
0000020425 00000 n 
0000022448 00000 n 
0000000015 00000 n 
0000000124 00000 n 
0000007289 00000 n 
0000007398 00000 n 
0000007714 00000 n 
0000007823 00000 n 
0000008139 00000 n 
0000008249 00000 n 
0000008565 00000 n 
0000008676 00000 n 
0000008993 00000 n 
0000009104 00000 n 
0000009421 00000 n 
0000009532 00000 n 
0000009848 00000 n 
0000009959 00000 n 
0000010276 00000 n 
0000010387 00000 n 
0000010704 00000 n 
0000010815 00000 n 
0000011131 00000 n 
0000011242 00000 n 
0000011559 00000 n 
0000011670 00000 n 
0000011987 00000 n 
0000012098 00000 n 
0000012414 00000 n 
0000012525 00000 n 
0000012842 00000 n 
0000012953 00000 n 
0000013270 00000 n 
0000013381 00000 n 
0000013697 00000 n 
0000013808 00000 n 
0000014125 00000 n 
0000014236 00000 n 
0000014553 00000 n 
0000014664 00000 n 
0000014980 00000 n 
0000015091 00000 n 
0000015408 00000 n 
0000015519 00000 n 
0000015836 00000 n 
0000015947 00000 n 
0000016263 00000 n 
0000016374 00000 n 
0000016691 00000 n 
0000016802 00000 n 
0000017119 00000 n 
0000017230 00000 n 
0000017546 00000 n 
0000017657 00000 n 
0000017974 00000 n 
0000018085 00000 n 
0000018871 00000 n 
0000018982 00000 n 
0000019523 00000 n 
0000019634 00000 n 
0000020175 00000 n 
0000020286 00000 n 
0000020683 00000 n 
0000020809 00000 n 
0000020940 00000 n 
0000021074 00000 n 
0000021212 00000 n 
0000021336 00000 n 
0000021465 00000 n 
0000021597 00000 n 
0000021733 00000 n 
0000021861 00000 n 
0000021988 00000 n 
0000022117 00000 n 
0000022250 00000 n 
0000022352 00000 n 
0000022701 00000 n 
0000022757 00000 n 
0000022813 00000 n 
0000022869 00000 n 
0000022925 00000 n 
0000023011 00000 n 
trailer
<<
/Size 83
/Root 82 0 R
/Info 81 0 R
/
>>
startxref
23191
%%EOF"
`;

exports[`generateSheets downloadLabels does nothing with no ballots 1`] = `""`;

exports[`generateSheets downloadLabels generates label sheets 1`] = `
"%PDF-1.3
%ºß¬à
3 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 4 0 R
>>
endobj
4 0 obj
<<
/Length 6859
>>
stream
0.57 w
0 G
BT
/F1 9 Tf
10.35 TL
0 g
25.51 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 721.13 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 695.62 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 721.13 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 695.62 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 721.13 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 695.62 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 648.85 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 623.34 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 648.85 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 623.34 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 648.85 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 623.34 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 576.57 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 551.06 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 576.57 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 551.06 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 576.57 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 551.06 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 518.46 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 504.28 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 478.77 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 518.46 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 504.28 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 478.77 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 518.46 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 504.28 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 478.77 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 432.00 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 406.49 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 432.00 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 406.49 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 432.00 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 406.49 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 359.72 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 334.20 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 359.72 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 334.20 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 359.72 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 334.20 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 287.43 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 261.92 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 287.43 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 261.92 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 287.43 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 261.92 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 215.15 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 189.64 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 215.15 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 189.64 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 215.15 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 189.64 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 142.87 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 117.35 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 142.87 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 117.35 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 142.87 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 117.35 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
1 0 obj
<</Type /Pages
/Kids [3 0 R ]
/Count 1
>>
endobj
5 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
6 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
7 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
8 0 obj
<<
/Type /Font
/BaseFont /Helvetica-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
9 0 obj
<<
/Type /Font
/BaseFont /Courier
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
10 0 obj
<<
/Type /Font
/BaseFont /Courier-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
11 0 obj
<<
/Type /Font
/BaseFont /Courier-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
12 0 obj
<<
/Type /Font
/BaseFont /Courier-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
13 0 obj
<<
/Type /Font
/BaseFont /Times-Roman
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
14 0 obj
<<
/Type /Font
/BaseFont /Times-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
15 0 obj
<<
/Type /Font
/BaseFont /Times-Italic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
16 0 obj
<<
/Type /Font
/BaseFont /Times-BoldItalic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
17 0 obj
<<
/Type /Font
/BaseFont /ZapfDingbats
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
18 0 obj
<<
/Type /Font
/BaseFont /Symbol
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
2 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/Font <<
/F1 5 0 R
/F2 6 0 R
/F3 7 0 R
/F4 8 0 R
/F5 9 0 R
/F6 10 0 R
/F7 11 0 R
/F8 12 0 R
/F9 13 0 R
/F10 14 0 R
/F11 15 0 R
/F12 16 0 R
/F13 17 0 R
/F14 18 0 R
>>
/XObject <<
>>
>>
endobj
19 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
20 0 obj
<<
/Producer (jsPDF 1.5.3)
/
>>
endobj
21 0 obj
<<
/Type /Catalog
/Pages 1 0 R
/OpenAction [3 0 R /FitH null]
/PageLayout /OneColumn
/OpenAction 19 0 R
>>
endobj
xref
0 22
0000000000 65535 f 
0000007035 00000 n 
0000008852 00000 n 
0000000015 00000 n 
0000000124 00000 n 
0000007092 00000 n 
0000007217 00000 n 
0000007347 00000 n 
0000007480 00000 n 
0000007617 00000 n 
0000007740 00000 n 
0000007869 00000 n 
0000008001 00000 n 
0000008137 00000 n 
0000008265 00000 n 
0000008392 00000 n 
0000008521 00000 n 
0000008654 00000 n 
0000008756 00000 n 
0000009100 00000 n 
0000009156 00000 n 
0000009242 00000 n 
trailer
<<
/Size 22
/Root 21 0 R
/Info 20 0 R
/
>>
startxref
9365
%%EOF"
`;

exports[`generateSheets downloadPlaceholders does nothing with no ballots 1`] = `""`;

exports[`generateSheets downloadPlaceholders generates placeholder sheets 1`] = `
"%PDF-1.3
%ºß¬à
3 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 4 0 R
>>
endobj
4 0 obj
<<
/Length 7113
>>
stream
0.57 w
0 G
BT
/F1 9 Tf
10.35 TL
0 g
25.51 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 721.13 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 695.62 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 721.13 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 695.62 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 721.13 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 695.62 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 648.85 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 623.34 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 648.85 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 623.34 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 663.02 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 648.85 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 623.34 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 576.57 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 551.06 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 576.57 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 551.06 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 590.74 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 576.57 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 551.06 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 518.46 Td
(Audit Board #1) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 504.28 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 478.77 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 518.46 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 504.28 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 478.77 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 518.46 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 504.28 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 478.77 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 432.00 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 406.49 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 432.00 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 406.49 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 446.17 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 432.00 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 406.49 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 359.72 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 334.20 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 359.72 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 334.20 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 373.89 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 359.72 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 334.20 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 287.43 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 261.92 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 287.43 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 261.92 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 301.61 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 287.43 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 261.92 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 215.15 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 189.64 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 215.15 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 189.64 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 229.32 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 215.15 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 189.64 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 142.87 Td
(Batch Name: 0003-04-Precinct 13) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
25.51 117.35 Td
(Ballot Number: 313) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 142.87 Td
(Batch Name: 0003-04-Precinct 19) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
221.10 117.35 Td
(Ballot Number: 2112) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 157.04 Td
(Audit Board #2) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 142.87 Td
(Batch Name: 0003-04-Precinct 29) Tj
T* (\\\\(Jonesboro Fire Department\\\\)) Tj
ET
BT
/F1 9 Tf
10.35 TL
0 g
416.69 117.35 Td
(Ballot Number: 1789) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
5 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 6 0 R
>>
endobj
6 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
7 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 8 0 R
>>
endobj
8 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
9 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 10 0 R
>>
endobj
10 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
11 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 12 0 R
>>
endobj
12 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
13 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 14 0 R
>>
endobj
14 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
15 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 16 0 R
>>
endobj
16 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
17 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 18 0 R
>>
endobj
18 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
19 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 20 0 R
>>
endobj
20 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
21 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 22 0 R
>>
endobj
22 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #1) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
23 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 24 0 R
>>
endobj
24 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
25 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 26 0 R
>>
endobj
26 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
27 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 28 0 R
>>
endobj
28 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
29 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 30 0 R
>>
endobj
30 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
31 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 32 0 R
>>
endobj
32 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
33 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 34 0 R
>>
endobj
34 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
35 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 36 0 R
>>
endobj
36 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
37 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 38 0 R
>>
endobj
38 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
39 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 40 0 R
>>
endobj
40 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
41 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 42 0 R
>>
endobj
42 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
43 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 44 0 R
>>
endobj
44 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
45 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 46 0 R
>>
endobj
46 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
47 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 48 0 R
>>
endobj
48 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
49 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 50 0 R
>>
endobj
50 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
51 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 52 0 R
>>
endobj
52 0 obj
<<
/Length 264
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 13 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 313) Tj
ET
endstream
endobj
53 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 54 0 R
>>
endobj
54 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 19 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 2112) Tj
ET
endstream
endobj
55 0 obj
<</Type /Page
/Parent 1 0 R
/Resources 2 0 R
/MediaBox [0 0 612.00 792.00]
/Contents 56 0 R
>>
endobj
56 0 obj
<<
/Length 265
>>
stream
0.57 w
0 G
BT
/F1 20 Tf
23.00 TL
0 g
56.69 735.31 Td
(Audit Board #2) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 678.61 Td
(Batch Name: 0003-04-Precinct 29 \\\\(Jonesboro Fire) Tj
T* (Department\\\\)) Tj
ET
BT
/F1 20 Tf
23.00 TL
0 g
56.69 508.54 Td
(Ballot Number: 1789) Tj
ET
endstream
endobj
1 0 obj
<</Type /Pages
/Kids [3 0 R 5 0 R 7 0 R 9 0 R 11 0 R 13 0 R 15 0 R 17 0 R 19 0 R 21 0 R 23 0 R 25 0 R 27 0 R 29 0 R 31 0 R 33 0 R 35 0 R 37 0 R 39 0 R 41 0 R 43 0 R 45 0 R 47 0 R 49 0 R 51 0 R 53 0 R 55 0 R ]
/Count 27
>>
endobj
57 0 obj
<<
/Type /Font
/BaseFont /Helvetica
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
58 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
59 0 obj
<<
/Type /Font
/BaseFont /Helvetica-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
60 0 obj
<<
/Type /Font
/BaseFont /Helvetica-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
61 0 obj
<<
/Type /Font
/BaseFont /Courier
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
62 0 obj
<<
/Type /Font
/BaseFont /Courier-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
63 0 obj
<<
/Type /Font
/BaseFont /Courier-Oblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
64 0 obj
<<
/Type /Font
/BaseFont /Courier-BoldOblique
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
65 0 obj
<<
/Type /Font
/BaseFont /Times-Roman
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
66 0 obj
<<
/Type /Font
/BaseFont /Times-Bold
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
67 0 obj
<<
/Type /Font
/BaseFont /Times-Italic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
68 0 obj
<<
/Type /Font
/BaseFont /Times-BoldItalic
/Subtype /Type1
/Encoding /WinAnsiEncoding
/FirstChar 32
/LastChar 255
>>
endobj
69 0 obj
<<
/Type /Font
/BaseFont /ZapfDingbats
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
70 0 obj
<<
/Type /Font
/BaseFont /Symbol
/Subtype /Type1
/FirstChar 32
/LastChar 255
>>
endobj
2 0 obj
<<
/ProcSet [/PDF /Text /ImageB /ImageC /ImageI]
/Font <<
/F1 57 0 R
/F2 58 0 R
/F3 59 0 R
/F4 60 0 R
/F5 61 0 R
/F6 62 0 R
/F7 63 0 R
/F8 64 0 R
/F9 65 0 R
/F10 66 0 R
/F11 67 0 R
/F12 68 0 R
/F13 69 0 R
/F14 70 0 R
>>
/XObject <<
>>
>>
endobj
71 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
72 0 obj
<<
/S /Named
/Type /Action
/N /Print
>>
endobj
73 0 obj
<<
/Producer (jsPDF 1.5.3)
/
>>
endobj
74 0 obj
<<
/Type /Catalog
/Pages 1 0 R
/OpenAction [3 0 R /FitH null]
/PageLayout /OneColumn
/OpenAction 71 0 R
/OpenAction 72 0 R
>>
endobj
xref
0 75
0000000000 65535 f 
0000018402 00000 n 
0000020404 00000 n 
0000000015 00000 n 
0000000124 00000 n 
0000007289 00000 n 
0000007398 00000 n 
0000007714 00000 n 
0000007823 00000 n 
0000008139 00000 n 
0000008249 00000 n 
0000008565 00000 n 
0000008676 00000 n 
0000008993 00000 n 
0000009104 00000 n 
0000009421 00000 n 
0000009532 00000 n 
0000009848 00000 n 
0000009959 00000 n 
0000010276 00000 n 
0000010387 00000 n 
0000010704 00000 n 
0000010815 00000 n 
0000011131 00000 n 
0000011242 00000 n 
0000011559 00000 n 
0000011670 00000 n 
0000011987 00000 n 
0000012098 00000 n 
0000012414 00000 n 
0000012525 00000 n 
0000012842 00000 n 
0000012953 00000 n 
0000013270 00000 n 
0000013381 00000 n 
0000013697 00000 n 
0000013808 00000 n 
0000014125 00000 n 
0000014236 00000 n 
0000014553 00000 n 
0000014664 00000 n 
0000014980 00000 n 
0000015091 00000 n 
0000015408 00000 n 
0000015519 00000 n 
0000015836 00000 n 
0000015947 00000 n 
0000016263 00000 n 
0000016374 00000 n 
0000016691 00000 n 
0000016802 00000 n 
0000017119 00000 n 
0000017230 00000 n 
0000017546 00000 n 
0000017657 00000 n 
0000017974 00000 n 
0000018085 00000 n 
0000018639 00000 n 
0000018765 00000 n 
0000018896 00000 n 
0000019030 00000 n 
0000019168 00000 n 
0000019292 00000 n 
0000019421 00000 n 
0000019553 00000 n 
0000019689 00000 n 
0000019817 00000 n 
0000019944 00000 n 
0000020073 00000 n 
0000020206 00000 n 
0000020308 00000 n 
0000020657 00000 n 
0000020713 00000 n 
0000020769 00000 n 
0000020855 00000 n 
trailer
<<
/Size 75
/Root 74 0 R
/Info 73 0 R
/
>>
startxref
20997
%%EOF"
`;
